--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,6 @@ monitor_speed = 115200
 lib_deps = 
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^6.21.3
+
+upload_protocol = espota 
+upload_port = 192.168.68.77
