added MQTT & LED support

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,11 @@ monitor_speed = 115200
 lib_deps = 
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^6.21.3
+	adafruit/Adafruit NeoPixel@^1.11.0
+	knolleary/PubSubClient@^2.8
+
 
 upload_protocol = espota 
 upload_port = 192.168.68.77
+; upload_protocol = esptool
+; upload_port = com4
