--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:az-delivery-devkit-v4]
+[env:SHELF-devkit-v4]
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
@@ -18,9 +18,20 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.3
 	adafruit/Adafruit NeoPixel@^1.11.0
 	knolleary/PubSubClient@^2.8
+	arduino-libraries/Stepper@^1.1.3
+upload_protocol = espota
+upload_port = 192.168.68.65
 
-
-upload_protocol = espota 
-upload_port = 192.168.68.77
-;upload_protocol = esptool
-;upload_port = com4
+[env:OFFICE-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	wnatth3/WiFiManager@^2.0.16-rc.2
+	bblanchon/ArduinoJson@^6.21.3
+	adafruit/Adafruit NeoPixel@^1.11.0
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/Stepper@^1.1.3
+upload_protocol = esptool
+upload_port = com4
