--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,9 @@ monitor_speed = 115200
 lib_deps = 
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^6.21.3
-	adafruit/Adafruit NeoPixel@^1.11.0
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Stepper@^1.1.3
+	fastled/FastLED@^3.6.0
 upload_protocol = espota
 upload_port = 192.168.68.80
 
@@ -30,8 +30,8 @@ monitor_speed = 115200
 lib_deps = 
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	bblanchon/ArduinoJson@^6.21.3
-	adafruit/Adafruit NeoPixel@^1.11.0
 	knolleary/PubSubClient@^2.8
 	arduino-libraries/Stepper@^1.1.3
+	fastled/FastLED@^3.6.0
 upload_protocol = esptool
 upload_port = com4
